--- a/index.html
+++ b/index.html
@@ -82,29 +82,29 @@
 <!--            </div>-->
             <!-- header-message-end -->
 
-            <div style="position: absolute;right: 0px; bottom: 0px">
-                <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
-            </div>
+<!--            <div style="position: absolute;right: 0px; bottom: 0px">-->
+<!--                <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">-->
+<!--            </div>-->
 
             <!--  Friendly Links -->
             <div style="position:fixed;top:200px;">
                 <a href="https://xtx-12.herokuapp.com/index.html">
-                    <img src="img/slider/zhoubo.jpg" alt="Food" width='200' height='200'>
+                    <img src="./img/slider/zhoubo.jpg" alt="Food" width='200' height='200'>
                 </a>
             </div>
             <div style="position:fixed;top:400px;">
                 <a href="https://xtx-12.herokuapp.com/index.html">
-                    <img src="img/slider/guoxiaojian.png" alt="Mooncake" width='200' height='100'>
+                    <img src="./img/slider/guoxiaojian.png" alt="Mooncake" width='200' height='100'>
                 </a>
             </div>
             <div style="position:fixed;top:200px; right:0;">
                 <a href="https://travelwebsite666.herokuapp.com/">
-                    <img src="img/slider/roadtrip.jpg" alt="Roadtrip" width='200' height='200'>
+                    <img src="./img/slider/roadtrip.jpg" alt="Roadtrip" width='200' height='200'>
                 </a>
             </div>
             <div style="position:fixed;top:400px; right:0;">
                 <a href="https://mytravel966.herokuapp.com/index.html">
-                    <img src="img/slider/yuzhe.jpg" alt="yuzheTravel" width='200' height='100'>
+                    <img src="./img/slider/yuzhe.jpg" alt="yuzheTravel" width='200' height='100'>
                 </a>
             </div>
             <!--  Friendly Links end -->
@@ -1354,7 +1354,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6">
-                            <img src="img/slider/yandexmap.png" alt="" width="400" height="320">
+                            <img src="./img/slider/yandexmap.png" alt="" width="400" height="320">
                         </div>
                     </div>
                 </div>
